fixed sticky hover on mobile

--- a/collectionstyles.css
+++ b/collectionstyles.css
@@ -64,25 +64,43 @@
 .desc {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
+  padding-bottom: 10px;
   margin-top: 50px;
   margin-bottom: auto;
   height: 400px;
-  opacity: 0;
   flex-direction: column;
-  font-size: 1.3rem;
+  opacity: 1;
+  font-size: 1.1rem;
   text-decoration: none;
+  padding-top: 10px;
+  color: #caac00;
 }
 
-.desc:hover{
-  transition: 0.5s ease;
-  color: #caac00;
-  opacity: 1;
-  background: rgba(0,0,0,0.6);
-  border-style: solid;
-  border-color: #caac00;
-  border-width: 0.1px;
+#click_to_expand {
+  font-style: italic;
 }
+
+@media (hover: hover) {
+  .desc {
+    height: 400px;
+    padding-top: 0;
+    opacity: 0;
+    justify-content: center;
+    padding-bottom: 0;
+  }
+  .desc:hover{
+    transition: 0.5s ease;
+    color: #caac00;
+    opacity: 1;
+    background: rgba(0,0,0,0.6);
+    border-style: solid;
+    border-color: #caac00;
+    border-width: 0.1px;
+  }
+
+}
+
 
 @media screen and (max-width: 700px) {
   #gallery_h1 {
