--- a/galleryStyles.css
+++ b/galleryStyles.css
@@ -33,24 +33,24 @@
   margin-top: 5rem;
 }
 .collection_images {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: auto;
-    margin-left: auto;
-    margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: auto;
+  margin-left: auto;
+  margin-right: auto;
 
-    height: 380px;
-    text-align: center;
-    color: white;
-    border-color: black;
-    position: relative;
+  height: 380px;
+  text-align: center;
+  color: white;
+  border-color: black;
+  position: relative;
 }
 #gallery_img {
-    width: 300px;
-    height: 300px;
-    object-fit: cover;
-    margin-top: auto;
-    margin-bottom: auto;
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .middle {
@@ -72,12 +72,15 @@
   text-decoration: none;
 }
 
-.desc:hover{
-  transition: 0.5s ease;
-  color: #caac00;
-  opacity: 1;
-  background: rgba(0,0,0,0.6);
-
+@media (hover: hover) {
+  
+  .desc:hover{
+    transition: 0.5s ease;
+    color: #caac00;
+    opacity: 1;
+    background: rgba(255,0,0,0.6);
+  
+  }  
 }
 
 .collections-desc {
